# SunLitOrchestra

./: .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LESSONS-BACKLOG.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  copilot-instructions.md
.cargo/: config.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.sldo/: refresh-loop.toml
agents/: slo-design-reviewer.md  slo-runbook-review-lead.md  slo-security-reviewer.md  slo-verification-lead.md
crates/sldo-common/: Cargo.toml  README.md
crates/sldo-common/src/: claude_cli.rs  color.rs  copilot.rs  detect.rs  git.rs  lib.rs  logging.rs  preflight.rs  runbook.rs  toolflags.rs
crates/sldo-install/: Cargo.toml  README.md
crates/sldo-install/src/: graphify.rs  host.rs  install.rs  main.rs  manifest.rs  paths.rs
crates/sldo-install/tests/: e2e_agent_host_m1.rs  e2e_agent_host_m2.rs  e2e_agent_host_m3.rs  e2e_agent_host_m5.rs  e2e_agent_operating_contract.rs  e2e_biz_a_m1.rs  e2e_biz_a_m2.rs  e2e_biz_a_m3.rs  e2e_biz_a_m4.rs  e2e_biz_b1_m1.rs  e2e_biz_b1_m2.rs  e2e_biz_b1_m3.rs  e2e_biz_b1_m4.rs  e2e_biz_b2_m1.rs  e2e_biz_b2_m2.rs  e2e_biz_b2_m3.rs  e2e_biz_b2_m4.rs  e2e_biz_c_m1.rs  e2e_biz_c_m2.rs  e2e_biz_c_m3.rs  e2e_biz_followup_m1.rs  e2e_biz_followup_m2.rs  e2e_biz_followup_m3.rs  e2e_biz_followup_m4.rs  e2e_biz_followup_m5.rs  e2e_biz_followup_m6.rs  e2e_biz_imp_m1.rs  e2e_biz_imp_m2.rs  e2e_biz_imp_m3.rs  e2e_biz_imp_m4.rs  e2e_biz_imp_m5.rs  e2e_biz_judgment_runtime_m1.rs  e2e_biz_judgment_runtime_m2.rs  e2e_cloud_threat_model_m1.rs  e2e_crates_io_followup.rs  e2e_eng_imp_m1.rs  e2e_eng_imp_m2.rs  e2e_eng_imp_m3.rs  e2e_eng_imp_m4.rs  e2e_eng_imp_m5.rs  (+44 more)
crates/sldo-install/tests/common/: claude_runtime.rs  judgment_runtime.rs  mod.rs
crates/sldo-research/: Cargo.toml  README.md
crates/sldo-research/src/: dossier.rs  main.rs  prompt.rs  research.rs
crates/sldo-tauri/: Cargo.toml  Info.plist  tauri.conf.json
crates/sldo-tauri/icons/: icon.icns
crates/sldo-tauri/src/: events.rs  main.rs  provider.rs  state.rs
crates/sldo-tauri/src/commands/: mod.rs  plan.rs  run.rs  settings.rs  voice.rs
crates/sldo-tauri/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/sldo-tauri/ui/src/: App.css  App.tsx  main.tsx
crates/sldo-tauri/ui/src/components/: App.test.tsx  ChatInput.test.tsx  ChatInput.tsx  ConversationView.test.tsx  ConversationView.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ExecutionView.test.tsx  ExecutionView.tsx  HomeScreen.test.tsx  HomeScreen.tsx  KeyboardShortcuts.test.tsx  MarkdownEditor.test.tsx  MarkdownEditor.tsx  MilestoneTracker.test.tsx  MilestoneTracker.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  Sidebar.test.tsx  Sidebar.tsx  StreamingPlan.test.tsx  VoiceButton.test.tsx  VoiceButton.tsx  VoiceTranscriber.test.tsx  VoiceTranscriber.tsx
crates/sldo-tauri/ui/src/e2e/: chatui.e2e.test.tsx  editor.e2e.test.tsx  execution.e2e.test.tsx  integration.e2e.test.tsx  planning.e2e.test.tsx  settings.e2e.test.tsx  transcriber.e2e.test.tsx  voice.e2e.test.tsx
crates/sldo-tauri/ui/src/hooks/: useExecution.ts  usePlan.ts  useStandaloneVoice.test.ts  useStandaloneVoice.ts  useStreamingEvents.ts  useVoice.ts
crates/sldo-tauri/ui/src/types/: index.ts
crates/sldo-tla-sha/: Cargo.toml
crates/sldo-tla-sha/src/: lib.rs  main.rs
crates/sldo-tla-sha/tests/: e2e.rs
docs/: ARCHITECTURE.md  GLOSSARY.md  LOOPS-BUSINESS.md  LOOPS-ENGINEERING.md  MIGRATION.md  PARADIGM-OVER-ENGINEERING-FOR-SIMPLICITY.md  RUNBOOK-AGENT-HOST-COMPATIBILITY.md  RUNBOOK-AGENT-OPERATING-CONTRACT.md  RUNBOOK-API-FACADE.md  RUNBOOK-AWS-ORG-SETUP.md  RUNBOOK-BIZ-PACK-JUDGMENT-RUNTIME.md  RUNBOOK-BIZ-SKILL-PACK-A.md  RUNBOOK-BIZ-SKILL-PACK-B1.md  RUNBOOK-BIZ-SKILL-PACK-B2.md  RUNBOOK-BIZ-SKILL-PACK-C.md  RUNBOOK-BUSINESS-SKILL-IMPROVEMENTS.md  RUNBOOK-ENGINEERING-SKILL-IMPROVEMENTS.md  RUNBOOK-LOOPS-AND-LESSONS-CLOSURE.md  RUNBOOK-RESEARCH-GENERATED.md  RUNBOOK-RESEARCH.md  RUNBOOK-RUST-REWRITE.md  RUNBOOK-SAST-RULEGEN-A.md  RUNBOOK-SCANNER-ORCHESTRATION.md  RUNBOOK-SECURE-AGENT-PLAYBOOK-IMPORTS.md  RUNBOOK-SKILL-PACK.md  RUNBOOK-SLO-SEC-LIBS.md  RUNBOOK-SLO-THREAT-MODEL-PRODUCER.md  RUNBOOK-SLO-THREAT-MODEL.md  RUNBOOK-TAURI-DESKTOP.md  RUNBOOK-TLA-SHA-AUTOPOP.md  RUNBOOK-VOICE-FIX-HOME.md  RUNBOOK-VOICE-TRANSCRIBER.md  RUNBOOK-innovation-loop.md  RUNBOOK-kani-verification.md  RUNBOOK-measurement-loop-slo-improvements.md  (+10 more)
xtasks/sast-verify/: Cargo.toml
xtasks/sast-verify/src/: check_clean.rs  check_coverage.rs  gate.rs  main.rs  semgrep_runner.rs  test_cmd.rs  tier_detect.rs  validate.rs  validate_file_paths.rs  yaml_schema.rs
xtasks/sast-verify/tests/: gate_e2e.rs  innovation_loop_m1_spine.rs  innovation_loop_m2_divergent.rs  innovation_loop_m3_converge.rs  innovation_loop_m4_spike.rs  innovation_loop_m5_close.rs  innovation_loop_rigor_m1_protocol_freeze.rs  innovation_loop_rigor_m2_validation.rs  innovation_loop_rigor_m3_recommendation.rs  innovation_loop_rigor_m4_end_to_end.rs  kani_m1_skill_contract.rs  kani_m3_integration.rs  kani_m5_pairing.rs  mloop_m1_ideate.rs  mloop_m2_product.rs  mloop_m3_plan.rs  mloop_m4_verify_retro.rs  mloop_m5_loops.rs  outcome_first_dogfood.rs  outcome_first_m1_template.rs  outcome_first_m2_plan.rs  outcome_first_m3_verify.rs  outcome_first_m4_consumers.rs  outcome_first_m5_principle.rs  sap_imp_m1_citations.rs  sap_imp_m2_examples.rs  sap_imp_m3_standards.rs  sap_imp_m4_workflow_pinning.rs  sap_imp_m5_agents.rs  slo_ticket_plan_iam_chase.rs  slo_tm_m1_schema.rs  slo_tm_m2_consumers.rs  slo_tmp_m1_producer.rs  slo_tmp_m2_rerun.rs  svl_m1.rs  svl_m2.rs  svl_m3.rs  svl_m4.rs  svl_m5.rs
xtasks/sast-verify/tests/fixtures/clean_subset/: example.rs
xtasks/sast-verify/tests/fixtures/mloop_failure_bar/: bad.md  remediated.md
xtasks/sast-verify/tests/fixtures/outcome_first_dogfood/: blocked.md  proven.md
(+1080 files in other folders)
