[workspace]
members = [
    "crates/sldo-common",
    "crates/sldo-research",
    "crates/sldo-install",
    "xtasks/sast-verify",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/kerberosmansour/SunLitOrchestra"
homepage = "https://github.com/kerberosmansour/SunLitOrchestra"
authors = ["Sherif Mansour <13433538+kerberosmansour@users.noreply.github.com>"]
readme = "README.md"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
colored = "2"
regex = "1"
chrono = "0.4"
which = "8"
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
tempfile = "3"
pulldown-cmark = { version = "0.13", default-features = false }

# Root package hosts workspace-level E2E / integration tests.
[package]
name = "sunlit-orchestra-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
sldo-common = { path = "crates/sldo-common" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
base64 = "0.22"

[[test]]
name = "e2e_common_m2"
path = "tests/e2e_common_m2.rs"

[[test]]
name = "e2e_research_m1"
path = "tests/e2e_research_m1.rs"

[[test]]
name = "e2e_research_m2"
path = "tests/e2e_research_m2.rs"

[[test]]
name = "e2e_research_m3"
path = "tests/e2e_research_m3.rs"

[[test]]
name = "e2e_research_m4"
path = "tests/e2e_research_m4.rs"

[[test]]
name = "e2e_research_m5"
path = "tests/e2e_research_m5.rs"

[[test]]
name = "e2e_research_m6"
path = "tests/e2e_research_m6.rs"

[[test]]
name = "e2e_research_m7"
path = "tests/e2e_research_m7.rs"

[[test]]
name = "e2e_sast_rulegen_a_m2"
path = "tests/e2e_sast_rulegen_a_m2.rs"

[[test]]
name = "e2e_sast_rulegen_a_m3"
path = "tests/e2e_sast_rulegen_a_m3.rs"
