[package]
name = "sldo-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
description = "Shared library for the SunLit Orchestra (SLO) skill-pack tooling — utilities used by sldo-install and sldo-research."
keywords = ["sunlit-orchestra", "slo", "agent", "skills", "claude"]
categories = ["development-tools"]

[lib]
name = "sldo_common"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
which = { workspace = true }
