[package]
name = "sldo-tauri"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sldo-common = { path = "../sldo-common" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
anyhow = "1"
reqwest = { version = "0.12", features = ["multipart"] }
dotenvy = "0.15"
base64 = "0.22"
rig-core = { version = "0.33", features = ["audio"] }
