[package]
name = "sldo-tla-sha"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sldo-tla-sha"
path = "src/main.rs"

[lib]
name = "sldo_tla_sha"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
url = "2"

[dev-dependencies]
tempfile = "3"
